<resources>
    <string name="app_name">Easy Ticket</string>
    <string name="app_logo">App logo</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tip">SCROLL BELOW AND SELECT YOUR EVENT</string>
    <string name="choose">Choose payment option </string>
    <string name="poster_name">uTHUNGULU</string>
    <string name="last">Last Dance</string>
    <string name="summary">Last event of the year featuring all artist</string>
    <string name="AboutEvent">About Event</string>
    <string name="event_item_title">Event title</string>
    <string name="event_item_date">21 MAY 2016</string>
    <string name="lorem">

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus erat in magna tempor suscipit. Nam sodales lectus vel est iaculis suscipit. Proin nec arcu sit amet turpis vestibulum rutrum ut nec lectus. Suspendisse varius, odio ut feugiat feugiat, sapien nibh pellentesque urna, et consequat arcu est ac enim. Duis at dui nunc. Suspendisse potenti. Sed aliquam commodo auctor. Integer vehicula in nisl non dignissim. Ut urna nisl, ultricies at massa hendrerit, placerat aliquet ante. Fusce leo erat, vehicula sed dictum vitae, porttitor nec magna. Nulla vel efficitur diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla ac ex sed mi ullamcorper mollis sed non odio. Donec vestibulum sollicitudin est. Praesent ultricies gravida massa, vitae facilisis lorem consequat porttitor. Ut condimentum vel purus id venenatis.

Proin orci metus, lobortis pellentesque rhoncus ut, maximus a nisi. Phasellus felis sem, pharetra in egestas ut, auctor ut ex. Ut dapibus laoreet orci, non gravida felis rutrum in. Ut vel arcu vehicula, luctus libero dignissim, convallis tortor. Donec accumsan, orci ac rutrum faucibus, urna nunc ullamcorper mauris, ornare maximus enim felis eu ipsum. Mauris aliquet dolor eu justo egestas rutrum. Suspendisse lacus ipsum, porta et lectus ac, suscipit rutrum augue. Nunc imperdiet, purus in pulvinar dictum, felis elit mattis leo, at facilisis nulla ex ac dui.

Fusce tempus varius erat, dignissim dapibus massa dapibus ac. Fusce ac nisl id turpis faucibus semper rhoncus sed massa. Praesent rutrum dictum nunc sed hendrerit. Pellentesque imperdiet arcu ac erat aliquet rutrum. Etiam vitae ex nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras dictum pulvinar tortor. Maecenas euismod finibus sem at cursus. Vivamus maximus non dolor eu ornare. Donec euismod sollicitudin bibendum. Proin ullamcorper mollis maximus. Morbi nec sem sapien. Cras diam leo, venenatis at neque eget, euismod sagittis ex. Proin pretium ex id mi lobortis, a porttitor turpis bibendum. In ultricies rutrum congue.

Integer cursus gravida libero sed elementum. Donec turpis tortor, ultrices in lacus vitae, tincidunt tincidunt est. Suspendisse sit amet enim hendrerit, venenatis diam eget, venenatis sem. Cras id egestas nisi. Nunc cursus dolor id nisl congue malesuada. Donec ac quam fringilla, tincidunt magna at, sollicitudin nunc. Nullam nec commodo lectus. Donec vel malesuada urna.

Maecenas rutrum scelerisque nisl. Nam suscipit, sem vitae ultricies dignissim, massa lacus egestas orci, vitae blandit orci lacus quis odio. Morbi dapibus vel odio id sagittis. Ut lobortis cursus dui, sit amet rutrum metus ullamcorper at. Integer eget lacus turpis. Fusce maximus venenatis euismod. Proin congue augue eget hendrerit laoreet. Quisque sagittis libero id velit auctor rutrum. Morbi et nisl imperdiet, dignissim odio quis, iaculis orci. Fusce a dictum urna. Sed lobortis pellentesque ex. Nunc vel augue vitae nibh auctor placerat non sit amet tortor. Pellentesque sit amet erat sit amet lorem mollis euismod in eu velit. </string>
</resources>
